@@ -40,7 +40,7 @@
 #endif
 
 #define QLA2X_TARGET_MAGIC	153
-#define QLA2X_INITIATOR_MAGIC   54203
+#define QLA2X_INITIATOR_MAGIC   54205
 
 #define QLA2X00_COMMAND_COUNT_INIT	250
 #define QLA2X00_IMMED_NOTIFY_COUNT_INIT 250
